<resources>
    <string name="app_name">HomeRun</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="LogOut">Log Out</string>
    <string name="register">Don\'t Have an Account? Register Now</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="shelter">Shelters</string>
</resources>
